fix: Resolvendo validação de campos
Retirado import sem uso, espaçamento entre outros.